[tool.poetry]
name = "logger"
version = "0.0.1"
description = ""
authors = ["Private_Joker"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^63.2.0"
wheel = "^0.37.1"
pip = "^22.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
